implementations/java/javacc/WaebricParser/src/WaebricParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. WaebricParser.java */
/* Imports */
import java.io.*;

public class WaebricParser/*@bgen(jjtree)*/implements WaebricParserTreeConstants, WaebricParserConstants {/*@bgen(jjtree)*/
  protected static JJTWaebricParserState jjtree = new JJTWaebricParserState();public static void main(String[] args) {

        /* first check arguments*/
        if(args.length == 0){
                System.out.println("No arguments found: Please run -> WaebricParser filename.wae");
                System.exit(0);
        }

        /* Reader set to null te avoid init problems*/
        Reader sr = null;

        /* Load data from file */
        try {
                sr = new FileReader(new File(args[0]));
                }catch(FileNotFoundException filenotfound) {
                System.out.println("File not found:");
                filenotfound.printStackTrace();
                System.exit(0);
        }

        WaebricParser p = new WaebricParser(sr);

        try {
                SimpleNode n = p.Modules();
                        String ast = processNode( n, 0);
                        System.out.println(ast);
                        n.dump("");
        } catch (ParseException pe) {
                pe.printStackTrace();
        }
        }

        private static String processNode(Node n, int childIndex) {
                /* Build the AST */
                ModulesVisitor moduleVisitor = new ModulesVisitor();
                n.jjtAccept(moduleVisitor, null);
                return moduleVisitor.getAST();
        }

/* GENERIC */
  static final public SimpleNode Modules() throws ParseException {
                        /*@bgen(jjtree) Modules */
  ASTModules jjtn000 = new ASTModules(JJTMODULES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MODULE:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Module();
      }
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final private void Module() throws ParseException {
                        /*@bgen(jjtree) Module */
  ASTModule jjtn000 = new ASTModule(JJTMODULE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MODULE);
      ModuleId();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IMPORT:
        case SITE:
        case DEF:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        ModuleElement();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void ModuleId() throws ParseException {
                   /*@bgen(jjtree) ModuleId */
  ASTModuleId jjtn000 = new ASTModuleId(JJTMODULEID);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_3:
      while (true) {
        jj_consume_token(IdCon);
                   jjtn000.image += "\"" + token.image + "\"";
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          jj_consume_token(DOT);
                                                                         jjtn000.image += ", ";
          break;
        default:
          jj_la1[2] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IdCon:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void ModuleElement() throws ParseException {
                        /*@bgen(jjtree) ModuleElement */
  ASTModuleElement jjtn000 = new ASTModuleElement(JJTMODULEELEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
        Import();
        break;
      case SITE:
        Site();
        break;
      case DEF:
        FunctionDef();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// ModuleElement Import 
// *********************************************
  static final public void Import() throws ParseException {
                 /*@bgen(jjtree) Import */
  ASTImport jjtn000 = new ASTImport(JJTIMPORT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IMPORT);
      ModuleId();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// ModuleElement Site
// *********************************************
  static final public void Site() throws ParseException {
               /*@bgen(jjtree) Site */
  ASTSite jjtn000 = new ASTSite(JJTSITE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SITE);
      Mappings();
      jj_consume_token(END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Mappings() throws ParseException {
                   /*@bgen(jjtree) Mappings */
  ASTMappings jjtn000 = new ASTMappings(JJTMAPPINGS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FileName:
        case DirName:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
        Mapping();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[6] = jj_gen;
          ;
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Mapping() throws ParseException {
                  /*@bgen(jjtree) Mapping */
  ASTMapping jjtn000 = new ASTMapping(JJTMAPPING);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Path();
      jj_consume_token(COLON);
      Markup();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Path() throws ParseException {
               /*@bgen(jjtree) Path */
  ASTPath jjtn000 = new ASTPath(JJTPATH);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FileName:
        jj_consume_token(FileName);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
                   jjtn000.image += "\"" + token.image + "\"";
        break;
      case DirName:
        jj_consume_token(DirName);
                          jjtn000.image += "path(\"" + token.image.substring(0, token.image.length()-1) + "\"";
        jj_consume_token(FileName);
                            jjtree.closeNodeScope(jjtn000, true);
                            jjtc000 = false;
                           jjtn000.image += ", \"" + token.image + "\")";
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

// ModuleElement FunctionDef
// *********************************************
  static final public void FunctionDef() throws ParseException {
                      /*@bgen(jjtree) FunctionDef */
  ASTFunctionDef jjtn000 = new ASTFunctionDef(JJTFUNCTIONDEF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DEF);
      jj_consume_token(IdCon);
                      jjtn000.image = "\"" + token.image + "\"";
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        Formals();
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      label_5:
      while (true) {
        Statement();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case EACH:
        case LET:
        case YIELD:
        case COMMENT:
        case ECHO:
        case CDATA:
        case LBRACE:
        case IdCon:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_5;
        }
      }
      jj_consume_token(END);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Formals() throws ParseException {
                  /*@bgen(jjtree) Formals */
  ASTFormals jjtn000 = new ASTFormals(JJTFORMALS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LPAREN);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IdCon:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        jj_consume_token(IdCon);
                          jjtn000.image += "\"" + token.image + "\"";
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          jj_consume_token(COMMA);
                                                                                jjtn000.image += ", ";
          break;
        default:
          jj_la1[11] = jj_gen;
          ;
        }
      }
      jj_consume_token(RPAREN);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Statement() throws ParseException {
                    /*@bgen(jjtree) Statement */
  ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_5(8)) {
        jj_consume_token(IF);
        jj_consume_token(LPAREN);
        Predicate();
        jj_consume_token(RPAREN);
        Statement();
        jj_consume_token(ELSE);
        Statement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          jj_consume_token(IF);
          jj_consume_token(LPAREN);
          Predicate();
          jj_consume_token(RPAREN);
          Statement();
          break;
        case EACH:
          jj_consume_token(EACH);
          jj_consume_token(LPAREN);
          Var();
          jj_consume_token(COLON);
          Expression();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DOT:
            DotIdCon();
            break;
          default:
            jj_la1[12] = jj_gen;
            ;
          }
          jj_consume_token(RPAREN);
          Statement();
          break;
        case LET:
          jj_consume_token(LET);
          label_7:
          while (true) {
            Assignment();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IdCon:
              ;
              break;
            default:
              jj_la1[13] = jj_gen;
              break label_7;
            }
          }
          jj_consume_token(IN);
          label_8:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IF:
            case EACH:
            case LET:
            case YIELD:
            case COMMENT:
            case ECHO:
            case CDATA:
            case LBRACE:
            case IdCon:
              ;
              break;
            default:
              jj_la1[14] = jj_gen;
              break label_8;
            }
            Statement();
          }
          jj_consume_token(END);
          break;
        default:
          jj_la1[23] = jj_gen;
          if (jj_2_6(4)) {
            jj_consume_token(LBRACE);
                                     jjtn000.image = "block:";
            label_9:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case IF:
              case EACH:
              case LET:
              case YIELD:
              case COMMENT:
              case ECHO:
              case CDATA:
              case LBRACE:
              case IdCon:
                ;
                break;
              default:
                jj_la1[15] = jj_gen;
                break label_9;
              }
              Statement();
            }
            jj_consume_token(RBRACE);
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case YIELD:
              jj_consume_token(YIELD);
              jj_consume_token(SEMICOLON);
                                      jjtree.closeNodeScope(jjtn000, true);
                                      jjtc000 = false;
                                     jjtn000.image = "yield:";
              break;
            case COMMENT:
              jj_consume_token(COMMENT);
              jj_consume_token(StrCon);
              jj_consume_token(SEMICOLON);
              break;
            default:
              jj_la1[24] = jj_gen;
              if (jj_2_7(2)) {
                jj_consume_token(ECHO);
                Expression();
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case DOT:
                  DotIdCon();
                  break;
                default:
                  jj_la1[16] = jj_gen;
                  ;
                }
                jj_consume_token(SEMICOLON);
              } else if (jj_2_8(2)) {
                jj_consume_token(ECHO);
                Embedding();
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case DOT:
                  DotIdCon();
                  break;
                default:
                  jj_la1[17] = jj_gen;
                  ;
                }
                jj_consume_token(SEMICOLON);
              } else {
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case CDATA:
                  jj_consume_token(CDATA);
                  Expression();
                  switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                  case DOT:
                    DotIdCon();
                    break;
                  default:
                    jj_la1[18] = jj_gen;
                    ;
                  }
                  jj_consume_token(SEMICOLON);
                  break;
                default:
                  jj_la1[25] = jj_gen;
                  if (jj_2_9(2147483647)) {
                    Markup();
                    jj_consume_token(SEMICOLON);
                                                                       jjtree.closeNodeScope(jjtn000, true);
                                                                       jjtc000 = false;
                                                                      jjtn000.image = "markup:";
                  } else if (jj_2_10(2147483647)) {
                    if (jj_2_2(3)) {
                      Markup();
                      Expression();
                      jj_consume_token(SEMICOLON);
                    } else {
                      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                      case IdCon:
                        label_10:
                        while (true) {
                          Markup();
                          Markup();
                          if (jj_2_1(2147483647)) {
                            ;
                          } else {
                            break label_10;
                          }
                        }
                        Expression();
                        jj_consume_token(SEMICOLON);
                        break;
                      default:
                        jj_la1[19] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                      }
                    }
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                           jjtn000.image = "markup-exp:";
                  } else if (jj_2_11(2147483647)) {
                    if (jj_2_4(2)) {
                      Markup();
                      Statement();
                    } else {
                      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                      case IdCon:
                        label_11:
                        while (true) {
                          Markup();
                          Markup();
                          if (jj_2_3(2147483647)) {
                            ;
                          } else {
                            break label_11;
                          }
                        }
                        Statement();
                        break;
                      default:
                        jj_la1[20] = jj_gen;
                        jj_consume_token(-1);
                        throw new ParseException();
                      }
                    }
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                           jjtn000.image = "markup-stat:";
                  } else if (jj_2_12(2147483647)) {
                    label_12:
                    while (true) {
                      Markup();
                      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                      case IdCon:
                        ;
                        break;
                      default:
                        jj_la1[21] = jj_gen;
                        break label_12;
                      }
                    }
                    Embedding();
                    jj_consume_token(SEMICOLON);
                                                                                                      jjtree.closeNodeScope(jjtn000, true);
                                                                                                      jjtc000 = false;
                                                                                                     jjtn000.image = "markup-embedding:";
                  } else if (jj_2_13(2147483647)) {
                    label_13:
                    while (true) {
                      Markup();
                      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                      case IdCon:
                        ;
                        break;
                      default:
                        jj_la1[22] = jj_gen;
                        break label_13;
                      }
                    }
                    jj_consume_token(SEMICOLON);
                                                                             jjtree.closeNodeScope(jjtn000, true);
                                                                             jjtc000 = false;
                                                                            jjtn000.image = "markup-markup:";
                  } else {
                    jj_consume_token(-1);
                    throw new ParseException();
                  }
                }
              }
